<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".P4Activity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/hello_P4"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/value_P4"
        android:textAlignment="center"
        android:textSize="22sp"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        android:id="@+id/et_value"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/salmon"
        android:text="@string/calcu"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/bt_calcu"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/honeydew"
        android:text="@string/colorb1"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/bt_color_one"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/honeydew"
        android:text="@string/colorb2"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/bt_color_two"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/honeydew"
        android:text="@string/colorb3"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/bt_color_three"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/honeydew"
        android:text="@string/colorb4"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/bt_color_four"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:id="@+id/tv_result"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/salmon"
        android:text="@string/clear"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/bt_clear"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_main"
        android:id="@+id/bt_return"
        />

</LinearLayout>