<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/android_developer_labs"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/gold"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"/>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app1"
        android:layout_marginTop="20dp"
        android:id="@+id/bt_exe1"
        />


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app2"
        android:id="@+id/bt_exe2"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app3"
        android:id="@+id/bt_exe3"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app4"
        android:id="@+id/bt_exe4"
        />



</LinearLayout>